unpackaged/objects/BusinessReport__c.object
<CustomObject>
    <fields>
        <fullName>PrspctOtaInsuranceFeeCurrency__c</fullName>
        <label>見込）OTA保険料通貨</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RMB</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>MOP</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>VTD（単位：1000）</fullName>
                </value>
                <value>
                    <fullName>日本円（単位：千円）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctOtaInsuranceFeeIncur__c</fullName>
        <inlineHelpText>本社負担？
現法負担？（現地保険のケースと、日本で支払った後現地法人に費用振り替えをするケースがあります）</inlineHelpText>
        <label>見込）OTA保険料負担</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrspctOtaInsuranceFee__c</fullName>
        <label>見込）OTA保険料</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrspctOta__c</fullName>
        <inlineHelpText>100%・・・入金待ち　または書類待ち 
A・・・これから請求書発行 
　　　又は これから書類手続き 
B・・・内諾を頂いている 
　　　又は これから詳細内容決定作業 
C・・・提案済み かつ検討中 
D・・・今年度は無理だが次年度は 
　　　見込あり（再アプローチ） 
×・・・提案済みだが全く見込なし 
未・・・まだ提案できていない
既契約・・・契約済み
無・・・対象無し</inlineHelpText>
        <label>見込）OTA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>未</fullName>
                    <default>true</default>
                    <label>未</label>
                </value>
                <value>
                    <fullName>既契約</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctSelfInsuranceEtc__c</fullName>
        <inlineHelpText>100%・・・入金待ち　または書類待ち 
A・・・これから請求書発行 
　　　又は これから書類手続き 
B・・・内諾を頂いている 
　　　又は これから詳細内容決定作業 
C・・・提案済み かつ検討中 
D・・・今年度は無理だが次年度は 
　　　見込あり（再アプローチ） 
×・・・提案済みだが全く見込なし 
未・・・まだ提案できていない 
既契約・・・契約済み 
無・・・対象無し</inlineHelpText>
        <label>見込）自家保険等</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>未</fullName>
                    <default>true</default>
                    <label>未</label>
                </value>
                <value>
                    <fullName>既契約</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctTyuzai__c</fullName>
        <inlineHelpText>100%・・・入金待ち　または書類待ち 
A・・・これから請求書発行 
　　　又は これから書類手続き 
B・・・内諾を頂いている 
　　　又は これから詳細内容決定作業 
C・・・提案済み かつ検討中 
D・・・今年度は無理だが次年度は 
　　　見込あり（再アプローチ） 
×・・・提案済みだが全く見込なし 
未・・・まだ提案できていない
既契約・・・契約済み
無・・・対象無し</inlineHelpText>
        <label>見込）駐在中国</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>未</fullName>
                    <default>true</default>
                    <label>未</label>
                </value>
                <value>
                    <fullName>既契約</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctVI__c</fullName>
        <inlineHelpText>100%・・・入金待ち　または書類待ち 
A・・・これから請求書発行 
　　　又は これから書類手続き 
B・・・内諾を頂いている 
　　　又は これから詳細内容決定作業 
C・・・提案済み かつ検討中 
D・・・今年度は無理だが次年度は 
　　　見込あり（再アプローチ） 
×・・・提案済みだが全く見込なし 
未・・・まだ提案できていない
既契約・・・契約済み
無・・・対象無し</inlineHelpText>
        <label>見込）自動車（任意）</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>未</fullName>
                    <default>true</default>
                    <label>未</label>
                </value>
                <value>
                    <fullName>既契約</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrspctYuYou__c</fullName>
        <inlineHelpText>100%・・・入金待ち　または書類待ち 
A・・・これから請求書発行 
　　　又は これから書類手続き 
B・・・内諾を頂いている 
　　　又は これから詳細内容決定作業 
C・・・提案済み かつ検討中 
D・・・今年度は無理だが次年度は 
　　　見込あり（再アプローチ） 
×・・・提案済みだが全く見込なし 
未・・・まだ提案できていない
既契約・・・契約済み
無・・・対象無し</inlineHelpText>
        <label>見込）優You</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>×</fullName>
                </value>
                <value>
                    <fullName>未</fullName>
                    <default>true</default>
                    <label>未</label>
                </value>
                <value>
                    <fullName>既契約</fullName>
                </value>
                <value>
                    <fullName>無</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResponseStatus__c</fullName>
        <label>フォロー状況</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TantoName__c</fullName>
        <label>面談者</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitItem__c</fullName>
        <label>訪問種目</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>メディック</fullName>
                </value>
                <value>
                    <fullName>チャイナボウル</fullName>
                </value>
                <value>
                    <fullName>健診</fullName>
                </value>
                <value>
                    <fullName>OTA</fullName>
                </value>
                <value>
                    <fullName>OM-S</fullName>
                </value>
                <value>
                    <fullName>保険関連商品</fullName>
                </value>
                <value>
                    <fullName>自動車保険</fullName>
                </value>
                <value>
                    <fullName>搭乗者保険</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>現地医療保険</fullName>
                </value>
                <value>
                    <fullName>リスクマネジメント</fullName>
                </value>
                <value>
                    <fullName>勉強会</fullName>
                </value>
                <value>
                    <fullName>医療対応</fullName>
                </value>
                <value>
                    <fullName>事故対応</fullName>
                </value>
                <value>
                    <fullName>クレーム対応</fullName>
                </value>
                <value>
                    <fullName>しおり説明</fullName>
                </value>
                <value>
                    <fullName>電話_メール</fullName>
                </value>
                <value>
                    <fullName>集金_書類お届け</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>営業報告</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DateTime__c</columns>
        <columns>EigyoStaff__c</columns>
        <columns>CompanyName__c</columns>
        <columns>VisitItem__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>営業報告番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND( isnull(Field6__c) = False  , Field4__c = True, isnull( DateTime__c )=False,EigyoStaff__c = &quot;&quot;)</errorConditionFormula>
        <errorMessage>営業社員または訪問日が入力されていません。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DateofVisit_Check</fullName>
        <active>true</active>
        <errorConditionFormula>DateTime__c  &gt;  TODAY()</errorConditionFormula>
        <errorMessage>訪問日が未来です。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NonMemberCheck</fullName>
        <active>false</active>
        <errorConditionFormula>AND(FIND(CompanyName__c , &quot;非会員&quot;)  &gt;= 1, Member__c = False)</errorConditionFormula>
        <errorMessage>非会員企業の場合は、非会員にチェックをつけてください。</errorMessage>
    </validationRules>
</CustomObject>